--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 optimizer:
-  n_simulation_steps: 200
+  n_simulation_steps: 10000
   n_boosters: 4
 env: 
   gravity: 
@@ -16,13 +16,13 @@ env:
     init_angle: 0.0                   # deg 
     engine:  # merlin
       merlin: 
-        max_force: 0.0        # [N]
-        angle_max: 20.0     # [deg] 
+        max_force: 1000.0        # [N]
+        angle_max: 0.0     # [deg] 
       cold_gas: 
-        max_force: 0.0        # [N]
+        max_force: 1000.0        # [N]
     noise: 
       position: 
-        x: .0                       # Standard deviation [m]
+        x: 5.0                       # Standard deviation [m]
         y: .0                       # Standard deviation [m]
       linear_velocity: 
         x: .0                        # Standard deviation [m / s]
