--- a/projects/genetic_optimization/config.yml
+++ b/projects/genetic_optimization/config.yml
@@ -15,8 +15,8 @@ trainer:
   num_generations: 10000 # not used yet
 
 optimizer:
-  num_boosters: 8
-  num_max_steps: 200
+  num_boosters: 1
+  num_max_steps: 2000
   mutation_probability: 0.5
   mutation_rate: 0.5
   lib: "numpy"    # numpy, torch
@@ -28,10 +28,10 @@ env:
       y: -10.0
 
   domain:
-    x_min: -80.0
-    x_max: 80.0
-    y_max: 100.0
-    y_min: -20.0
+    x_min: -200.0
+    x_max: 200.0
+    y_max: 500.0
+    y_min: -10.0
 
   gravity: 
     x: 0.0
@@ -41,11 +41,11 @@ env:
 
     init:
       position: 
-        x: 50.0
-        y: 50.0
+        x: 70.0
+        y: 400.0
       linear_velocity: 
-        x: 0.0
-        y: 0.0
+        x: -20.0
+        y: -20.0
       angular_velocity: 0.0
       angle: 0.0
 
@@ -54,10 +54,10 @@ env:
     engine:
       main: # merlin
         density: 1.0  # Average density of engines.
-        max_force: 10.0
+        max_force: 50000.0
         # max_angle: 20.0
-      coldgas:  # cold gas propulsion system (cgps)
-        max_force: 1.0
+      cold_gas:  # cold gas propulsion system (cgps)
+        max_force: 2000.0
         # max_angle: 20.0
 
     noise: 
@@ -73,20 +73,21 @@ env:
     neural_network: # model
       num_dim_in: 6       # Position, linear velocity, angular velocity, angle
       num_dim_out: 3      # Actions for three engines.
-      num_dim_hidden: 8
+      num_dim_hidden: 16
       num_hidden_layers: 2
 
 framework:
   screen:
     width: 640
     height: 1024
-  # offset:
-  #   x: 0
-  #   y: 0
   target_fps: 60
   velocity_iterations: 10   # Number of iterations to compute next velocity.
   position_iterations: 10   # Number of iterations to compute next position.
 
 renderer:
-  scale_force: 1.0
-  ppm: 5     # Pixels per meter / zoom
+  scale_force: 0.01
+  screen:
+    shift:
+      x: -0.5
+      y: -0.1
+  ppm: 2     # Pixels per meter / zoom
