--- a/projects/genetic_optimization/config.yml
+++ b/projects/genetic_optimization/config.yml
@@ -1,5 +1,5 @@
 # Genetic optimization configuration for BoosterLanding 
-random_seed: 192837465
+random_seed: 192837461
 
 # Directory to save the frames to create a video.
 dirs:
@@ -16,32 +16,32 @@ checkpoints:
 
 optimizer:
   num_boosters: 8
-  num_max_steps: 500
-  mutation_probability: 0.04
-  mutation_rate: 0.04
+  num_max_steps: 600
+  mutation_probability: 0.02
+  mutation_rate: 0.02
   lib: "numpy"    # numpy, torch
 
 env:
 
-  gravity: 
+  gravity: # [m / s^2]
     x: 0.0
     y: -9.81
 
-  domain:
+  domain: # [m]
     x_min: -200.0
     x_max: 200.0
     y_max: 500.0
     y_min: -5.0
 
   landing_pad:
-    position:
-      x: 0.0
+    position: # [m]
+      x: -80.0
       y: 0.0
 
   landing:
-    v_max: 
-      x: 10.0
-      y: -10.0
+    v_max: # [m / s]
+      x: 20.0
+      y: -20.0
 
   booster:
     fixed_rotation: true    # Fix rotation for faster learning.
@@ -51,28 +51,28 @@ env:
       max_angular_velocity: 90    # [deg / s]
 
     init:
-      position: 
+      position: # [m]
+        x: 70.0
+        y: 450.0
+      linear_velocity: # [m/s]
         x: 0.0
-        y: 400.0
-      linear_velocity: 
-        x: 0.0
-        y: -50.0
-      angular_velocity: 0.0   # [deg / second], counterclockwise for positive numbers
+        y: -20.0
+      angular_velocity: 0.0   # [deg / s], counterclockwise for positive numbers
       angle: 0.0              # [deg] counterclockwise
 
     engine:
       main: # merlin
-        max_force: 20000.0
-        max_angle: 20.0   # gimbal angle, Falcon 9: ~15 degrees
+        max_force: 800000.0 # [N]   , Merlin: 854 kN at sea level
+        max_angle: 25.0   # gimbal angle, Falcon 9: ~15 degrees
       cold_gas:  # Cold gas propulsion system.
         max_force: 0.0
         max_angle: 0.0
 
     noise:  # TODO: move this to env?
-      position: 
-        x: 20.0                       # Standard deviation [m]
+      position: # [m] 
+        x: 10.0                       # Standard deviation [m]
         y: 0.0                       # Standard deviation [m]
-      linear_velocity: 
+      linear_velocity: # [m/s]
         x: 0.0                        # Standard deviation [m / s]
         y: 0.0                        # Standard deviation [m / s]
       angular_velocity: 0.0             # Standard deviation [deg / s]
@@ -93,7 +93,7 @@ framework:
   position_iterations: 10   # Number of iterations to compute next position.
 
 renderer:
-  scale_force: 0.01
+  scale_force: 0.0001
   screen:
     shift:
       x: -0.5
