--- a/projects/simulated_annealing/config.yml
+++ b/projects/simulated_annealing/config.yml
@@ -1,4 +1,7 @@
-# Configuration for Simulated Annealing 
+#########################################
+# Configuration for Simulated Annealing #
+#########################################
+
 random_seed: 192837461
 
 # Directory to save the frames to create a video.
@@ -12,15 +15,18 @@ checkpoints:
   model_path: "weights"
 
 trainer:
-  num_generations: -1  # -1 for infinite generations or positive integer. TODO: -> num_epochs?
+  num_generations: 10000  # -1 for infinite generations or positive integer. TODO: -> num_epochs?
 
 # Simulated annealing
 optimizer:
-  num_boosters: 1  # TODO: This is fix. Hard-code this.
+  num_boosters: 1  # TODO: This is fix.
   num_simulation_steps: 1000
-  mutation_probability: 0.20  # -> perturbation_probability
-  mutation_rate: 0.03  # -> perturbation_rate
-  lib: "numpy"    # numpy, torch
+  perturbation_probability_initial: 1.0   # NOTE: Not in use
+  perturbation_probability_final: 0.01    # NOTE: Not in use
+  perturbation_rate: 0.05
+  temp_initial: 2.0
+  temp_final: 1.0e-6
+  lib: "numpy"    # NOTE: This is fix.
 
 # Simulation environment 
 env:
@@ -39,7 +45,7 @@ env:
 
   landing_pad:
     position: # [m]
-      x: 0.0
+      x: -100.0
       y: 0.0
 
   landing:
@@ -51,12 +57,12 @@ env:
     fixed_rotation: true    # Fix rotation for faster learning.
 
     stress:
-      max_angle: 10  # [deg]
+      max_angle: 20  # [deg]
       max_angular_velocity: 180  # [deg / s]
 
     init:
       position: # [m]
-        x: 0.0
+        x: 90.0
         y: 400.0
       linear_velocity: # [m/s]
         x: 0.0
@@ -69,12 +75,12 @@ env:
         max_force: 800000.0  # [N] 854 kN at sea level
         max_angle: 30.0  # [deg] Gimbal angle, about ~15 degrees for Falcon 9
       cold_gas:  # Cold gas propulsion system.
-        max_force: 10000.0  # [N]
+        max_force: 100000.0  # [N]
         max_angle: 0.0  # [deg]
 
     noise:  # TODO: move this to env?
       position: # [m] 
-        x: 50.0                       # Standard deviation [m]
+        x: 10.0                       # Standard deviation [m]
         y: 0.0                       # Standard deviation [m]
       linear_velocity: # [m/s]
         x: 0.0                        # Standard deviation [m / s]
