--- a/projects/simulated_annealing/config.yml
+++ b/projects/simulated_annealing/config.yml
@@ -23,10 +23,12 @@ optimizer:
   num_iterations: 50000  # Decrease temperature for `num_iterations`
   num_simulation_steps: 1000
   perturbation_probability_initial: 1.0
-  perturbation_probability_final: 0.0001
-  perturbation_rate: 0.04
-  temp_initial: 0.05
+  perturbation_probability_final: 0.001
+  perturbation_rate_initial: 0.04
+  perturbation_rate_final: 0.04
+  temp_initial: 0.06
   temp_final: 1.0e-6
+  # perturbation_rate: 0.04
   lib: "numpy"    # NOTE: This is fix.
 
 # Simulation environment 
@@ -67,7 +69,7 @@ env:
         y: 400.0
       linear_velocity: # [m/s]
         x: 0.0
-        y: -50.0
+        y: -30.0
       angular_velocity: 0.0   # [deg / s], counterclockwise for positive numbers
       angle: 0.0              # [deg] counterclockwise
 
@@ -81,18 +83,18 @@ env:
 
     noise:  # TODO: move this to env?
       position: # [m] 
-        x: 50.0                       # Standard deviation [m]
-        y: .0                       # Standard deviation [m]
+        x: 30.0                       # Standard deviation [m]
+        y: 0.0                       # Standard deviation [m]
       linear_velocity: # [m/s]
-        x: .0                        # Standard deviation [m / s]
-        y: .0                        # Standard deviation [m / s]
+        x: 0.0                        # Standard deviation [m / s]
+        y: 0.0                        # Standard deviation [m / s]
       angular_velocity: 0.0             # Standard deviation [deg / s]
       angle: 0.0                      # Standard deviation [deg]
 
     neural_network: # model
       num_dim_in: 6       # Position, linear velocity, angular velocity, angle.
       num_dim_out: 6      # Predictions of thrust and angle for three engines.
-      num_dim_hidden: 32
+      num_dim_hidden: 8
       num_hidden_layers: 3
 
 framework:
