--- a/projects/evolution_strategies/config.yml
+++ b/projects/evolution_strategies/config.yml
@@ -19,13 +19,13 @@ trainer:
 
 # Evolution strategies 
 optimizer:
-  num_boosters: 16
-  num_simulation_steps: 1000
-  learning_rate: 0.1
+  num_boosters: 32
+  num_simulation_steps: 500
+  learning_rate: 0.2
+  standard_deviation: 0.2  # Standard deviation of samples around current parameters.
   noise_probability: 1.0  # Allows for sparse noise.
-  standard_deviation: 0.01  # Standard deviation of samples around current parameters.
   momentum: 0.99  # NOT IN USE
-  lib: "numpy"    # numpy, torch
+  lib: "numpy" 
 
 # Simulation environment 
 env:
