--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,18 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Visual Studio Code
+.vscode/*
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
 **/runs/**
-*/.vscode
